--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && react-snapshot",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "standard --verbose | snazzy",
     "lint:fix": "standard --fix"
   },
   "devDependencies": {
-    "react-snapshot": "^1.3.0",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   },
