--- a/firebase.json
+++ b/firebase.json
@@ -2,9 +2,25 @@
   "hosting": {
     "public": "build",
     "headers": [
+      {
+        "source" : "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+        "headers" : [ {
+          "key" : "Access-Control-Allow-Origin",
+          "value" : "*"
+        } ]
+      }, {
+        "source" : "**/*.@(jpg|jpeg|gif|png)",
+        "headers" : [ {
+          "key" : "Cache-Control",
+          "value" : "max-age=7200"
+        } ]
+      },
       { 
         "source": "/service-worker.js",
-        "headers": [ { "key": "Cache-Control", "value": "max-age=3600" } ]
+        "headers": [ {
+          "key": "Cache-Control",
+          "value": "no-cache"
+        } ]
       }
     ],
     "ignore": [
