--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "standard --verbose | snazzy",
+    "lint": "standard --verbose",
     "lint:fix": "standard --fix"
   },
   "devDependencies": {
-    "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   },
   "standard": {
