--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: false
 language: node_js
 os: linux
 
+env:
+  - PUBLIC_URL=http://www.usinadosbags.com.br/
+
 cache:
   directories:
     - "node_modules"
