--- a/firebase.json
+++ b/firebase.json
@@ -9,10 +9,10 @@
           "value" : "*"
         } ]
       }, {
-        "source" : "**/*.@(jpg|jpeg|gif|png)",
+        "source" : "**/*.@(eot|otf|ttf|ttc|woff|font.css|jpg|jpeg|gif|png)",
         "headers" : [ {
           "key" : "Cache-Control",
-          "value" : "max-age=7200"
+          "value" : "max-age=86400"
         } ]
       },
       { 
