--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "usinadosbags",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "private": true,
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/enikolas/usinadosbags"
+  },
   "author": {
     "name": "Everton Nikolas de Oliveira",
     "email": "enikolas.oliveira@gmail.com"
-  },
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "source-map-explorer": "^1.5.0"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
@@ -23,9 +20,6 @@
     "lint": "standard --verbose",
     "lint:fix": "standard --fix"
   },
-  "devDependencies": {
-    "standard": "^10.0.3"
-  },
   "standard": {
     "env": {
       "jest": true
@@ -33,5 +27,15 @@
     "ignore": [
       "src/registerServiceWorker.js"
     ]
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "source-map-explorer": "^1.5.0"
+  },
+  "devDependencies": {
+    "standard": "^10.0.3"
   }
 }
