--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-flip-page": "^0.14.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "source-map-explorer": "^1.5.0"
