--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,3 +21,25 @@ jobs:
 
       - run: npm run lint
       - run: npm run build
+
+  deploy-job:
+    docker:
+      - image: circleci/node:8
+    working_directory: ~/repo  
+    steps:
+      - run:
+          name: Deploy Master to Firebase
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+
+workflows:
+  version: 2
+  
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy-job:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
