--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "source-map-explorer": "^1.5.0"
   },
   "devDependencies": {
+    "firebase-tools": "^3.17.4",
     "standard": "^10.0.3"
   }
 }
