--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "standard --verbose",
-    "lint:fix": "standard --fix"
+    "lint:fix": "standard --fix",
+    "deploy": "firebase deploy --token=$FIREBASE_DEPLOY_TOKEN"
   },
   "standard": {
     "env": {
