--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ workflows:
   
   build-and-deploy:
     jobs:
-      - build:
+      - build
       - deploy:
           requires:
             - build
