--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.4",
   "private": true,
   "license": "MIT",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/enikolas/usinadosbags"
@@ -12,11 +13,9 @@
     "email": "enikolas.oliveira@gmail.com"
   },
   "scripts": {
-    "analyze": "source-map-explorer build/static/js/main.*",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "test": "jest",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
     "lint": "standard --verbose",
     "lint:fix": "standard --fix",
     "deploy": "firebase deploy --token=$FIREBASE_DEPLOY_TOKEN"
@@ -33,12 +32,27 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-flip-page": "^0.15.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "source-map-explorer": "^1.5.0"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "compression-webpack-plugin": "^1.1.10",
+    "copy-webpack-plugin": "^4.5.0",
+    "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
     "firebase-tools": "^3.17.4",
-    "standard": "^11.0.0"
+    "html-webpack-plugin": "^3.0.4",
+    "standard": "^11.0.0",
+    "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^4.1.2"
   }
 }
