--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test": "jest",
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack.dev.js",
-    "lint": "standard --verbose",
-    "lint:fix": "standard --fix",
+    "lint": "eslint --ext .js src/",
     "deploy": "firebase deploy --token=$FIREBASE_DEPLOY_TOKEN"
   },
   "standard": {
@@ -29,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-flip-page": "^0.15.0",
@@ -44,10 +44,15 @@
     "compression-webpack-plugin": "^1.1.10",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^21.12.2",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.11",
     "firebase-tools": "^3.17.4",
     "html-webpack-plugin": "^3.0.4",
-    "standard": "^11.0.0",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.0.1",
