Fix identation of circleCI config file

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,9 @@ end_of_line = lf
 charset = utf-8
 indent_style = tab
 indent_size = 2
+
+[*.yml]
+end_of_line = lf
+charset = utf-8
+indent_style = space
+indent_size = 2
